websites/site/lucenetemplate/styles: Added padding to right side of menu to prevent Fork me on GihHub from overlapping it

--- a/websites/site/lucenetemplate/styles/site.css
+++ b/websites/site/lucenetemplate/styles/site.css
@@ -209,7 +209,7 @@ pre.clean {
   bottom: 1px;
   top: auto;
 }
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   #forkongithub {
     position: fixed;
     display: block;
